--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,12 @@ nav {
   position: fixed;
   left: 0;
   top: 0;
-  box-shadow: 0.1rem 0.1rem 0.3rem #393C45; }
+  box-shadow: 0.05rem 0.1rem 0.3rem #393C45;
+  transition: all 500ms ease-in 50ms; }
   nav .img-logo {
     justify-content: flex-start; }
     nav .img-logo img {
+      transition: all 500ms ease-in 50ms;
       max-height: 6.5rem;
       padding: 2rem .5rem;
       opacity: 0.9; }
@@ -103,6 +105,21 @@ nav {
       transition: all 500ms ease-in 50ms; }
       nav .link-up div:hover {
         color: #D29E30;
+        box-shadow: 0.05rem 0.1rem 0.3rem #393C45;
         background-color: rgba(57, 60, 69, 0.9); }
+
+.nav-scroll {
+  height: 4.5rem;
+  background: rgba(255, 255, 255, 0.7);
+  border-bottom: 0.3rem solid #393C45; }
+  .nav-scroll .img-logo img {
+    height: 3rem;
+    padding: .85rem .4rem; }
+    .nav-scroll .img-logo img:first-child {
+      padding-left: 1rem; }
+  .nav-scroll .link-up div {
+    padding: 1.2rem; }
+    .nav-scroll .link-up div:hover {
+      background-color: #393C45; }
 
 /*# sourceMappingURL=style.css.map */
