--- a/css/style.scss
+++ b/css/style.scss
@@ -39,11 +39,13 @@ nav {
     position: fixed;
     left: 0;
     top: 0;
-    box-shadow: .1rem .1rem .3rem $gray;
+    box-shadow: $shadow;
+    transition: all 500ms ease-in 50ms;
     .img-logo {
         @extend .div-flex;
         justify-content: flex-start;
         img {
+            transition: all 500ms ease-in 50ms;
             max-height: 6.5rem;
             padding: 2rem .5rem;
             opacity: 0.9;
@@ -62,9 +64,35 @@ nav {
             transition: all 500ms ease-in 50ms;
             &:hover {
                 color: $yellow;
+                box-shadow: $shadow;
                 background-color: rgba($gray, 0.9);
             }
         }
     }
 }
+
+.nav-scroll {
+    height: 4.5rem;
+    background: rgba(255,255,255,.7);
+    border-bottom: .3rem solid $gray;
+    .img-logo {
+        img {
+            height: 3rem;
+            padding: .85rem .4rem;
+            &:first-child { padding-left: 1rem; }
+        }
+    }
+    .link-up {
+        div {
+            padding: 1.2rem;
+            &:hover { background-color: $gray; }
+        }
+    }
+}
+
+
+
+
+
+
 
