--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body, html {
   justify-content: space-between; }
 
 .tlo1 {
-  background-image: url("../img/011.jpg"); }
+  background-image: url("../img/01.jpg"); }
 
 .tlo2 {
   background-image: url("../img/02.jpg"); }
@@ -121,5 +121,25 @@ nav {
     padding: 1.2rem; }
     .nav-scroll .link-up div:hover {
       background-color: #393C45; }
+
+.content {
+  padding: 5rem 10rem;
+  line-height: 1.7rem;
+  text-align: justify; }
+  .content h2 {
+    font-size: 4rem;
+    color: #D29E30;
+    text-shadow: 0.05rem 0.1rem 0.3rem #393C45;
+    margin-bottom: 3rem;
+    margin-top: 2rem; }
+  .content p {
+    margin-top: 1.5rem; }
+
+#btn-up {
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem; }
+  #btn-up img {
+    height: 4rem; }
 
 /*# sourceMappingURL=style.css.map */
