--- a/css/variables.scss
+++ b/css/variables.scss
@@ -8,3 +8,6 @@ $shadow: .05rem .1rem .3rem $gray;
 
 // czcionki
 $primary-font: 'Raleway', sans-serif;
+
+// efekt przejścia
+$transition: all 500ms ease-in 50ms;
