--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,6 +1,7 @@
 // kolory
 $yellow: #D29E30;
 $gray: #393C45;
+$white: #FEFEFE;
 $gradient-menu: linear-gradient(to bottom, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.5) 45%, rgba(255,255,255,0.2) 80%, rgba(255,255,255,0.05) 100%);
 
 // cień
