--- a/css/style.scss
+++ b/css/style.scss
@@ -113,10 +113,12 @@ nav {
 
 // przycisk - do góry
 #btn-up {
+    transition: $transition;
     position: fixed;
     right: -10rem;
     bottom: 2rem;
     img {
+        transition: $transition;
         height: 4rem;
     }
 }
@@ -144,5 +146,32 @@ footer {
         line-height: 2rem;
         font-size: .9rem;
         font-weight: lighter;
+    }
+}
+
+// urządzenia mobilne - tablet
+@media #{$tablet} {
+    #btn-up {
+        bottom: 1rem;
+        img {
+            height: 3rem;
+            opacity: 0.7;
+        }
+    }
+    .content {
+        padding: 5rem 5rem;
+        h2 {
+            font-size: 3rem;
+            line-height: 4rem;
+        }
+        p {
+            margin-top: 1rem;
+            font-size: .9rem;
+        }
+    }
+    footer {
+        .div-flex {
+            padding: 2rem 2rem 1rem 2rem;
+        }
     }
 }
