--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,7 @@ nav {
     position: fixed;
     left: 0;
     top: 0;
+    z-index: 100;
     box-shadow: $shadow;
     transition: $transition;
     .img-logo {
@@ -105,9 +106,13 @@ nav {
         line-height: 5rem;
         margin-top: 1rem;
         text-align: center;
+        position: relative;
+        right: 2000px;
     }
     p {
         margin-top: 1.5rem;
+        position: relative;
+        right: 2000px;
     }
 }
 
